--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,12 @@ astunparse==1.6.3
 cachetools==6.2.2
 certifi==2025.11.12
 charset-normalizer==3.4.4
+contourpy==1.3.2
+cycler==0.12.1
+filelock==3.20.0
 flatbuffers==25.9.23
+fonttools==4.60.1
+fsspec==2025.10.0
 gast==0.4.0
 google-auth==2.43.0
 google-auth-oauthlib==0.4.6
@@ -11,22 +16,37 @@ google-pasta==0.2.0
 grpcio==1.76.0
 h5py==3.15.1
 idna==3.11
+Jinja2==3.1.6
 keras==2.10.0
 Keras-Preprocessing==1.1.2
+kiwisolver==1.4.9
 libclang==18.1.1
 Markdown==3.10
 MarkupSafe==3.0.3
+matplotlib==3.10.7
+mpmath==1.3.0
+networkx==3.4.2
 numpy==2.2.6
 oauthlib==3.3.1
+opencv-python==4.12.0.88
 opt_einsum==3.4.0
 packaging==25.0
+pillow==12.0.0
+polars==1.35.2
+polars-runtime-32==1.35.2
 protobuf==3.19.6
+psutil==7.1.3
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
+pyparsing==3.2.5
+python-dateutil==2.9.0.post0
+PyYAML==6.0.3
 requests==2.32.5
 requests-oauthlib==2.0.0
 rsa==4.9.1
+scipy==1.15.3
 six==1.17.0
+sympy==1.14.0
 tensorboard==2.10.1
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
@@ -34,7 +54,11 @@ tensorflow==2.10.1
 tensorflow-estimator==2.10.0
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==3.2.0
+torch==2.9.1
+torchvision==0.24.1
 typing_extensions==4.15.0
+ultralytics==8.3.228
+ultralytics-thop==2.0.18
 urllib3==2.5.0
 Werkzeug==3.1.3
 wrapt==2.0.1
