--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ oauthlib==3.3.1
 opencv-python==4.12.0.88
 opt_einsum==3.4.0
 packaging==25.0
+pandas==2.3.3
 pillow==12.0.0
 polars==1.35.2
 polars-runtime-32==1.35.2
@@ -40,6 +41,7 @@ pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
+pytz==2025.2
 PyYAML==6.0.3
 requests==2.32.5
 requests-oauthlib==2.0.0
@@ -57,6 +59,7 @@ termcolor==3.2.0
 torch==2.9.1
 torchvision==0.24.1
 typing_extensions==4.15.0
+tzdata==2025.2
 ultralytics==8.3.228
 ultralytics-thop==2.0.18
 urllib3==2.5.0
