--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,12 @@ certifi==2025.11.12
 charset-normalizer==3.4.4
 contourpy==1.3.2
 cycler==0.12.1
+exceptiongroup==1.3.0
 filelock==3.20.0
 flatbuffers==25.9.23
 fonttools==4.60.1
 fsspec==2025.10.0
+future==1.0.0
 gast==0.4.0
 google-auth==2.43.0
 google-auth-oauthlib==0.4.6
@@ -16,6 +18,7 @@ google-pasta==0.2.0
 grpcio==1.76.0
 h5py==3.15.1
 idna==3.11
+iniconfig==2.3.0
 Jinja2==3.1.6
 keras==2.10.0
 Keras-Preprocessing==1.1.2
@@ -27,19 +30,39 @@ matplotlib==3.10.7
 mpmath==1.3.0
 networkx==3.4.2
 numpy==2.2.6
+nvidia-cublas-cu12==12.8.4.1
+nvidia-cuda-cupti-cu12==12.8.90
+nvidia-cuda-nvrtc-cu12==12.8.93
+nvidia-cuda-runtime-cu12==12.8.90
+nvidia-cudnn-cu12==9.10.2.21
+nvidia-cufft-cu12==11.3.3.83
+nvidia-cufile-cu12==1.13.1.3
+nvidia-curand-cu12==10.3.9.90
+nvidia-cusolver-cu12==11.7.3.90
+nvidia-cusparse-cu12==12.5.8.93
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu12==2.27.5
+nvidia-nvjitlink-cu12==12.8.93
+nvidia-nvshmem-cu12==3.3.20
+nvidia-nvtx-cu12==12.8.90
 oauthlib==3.3.1
 opencv-python==4.12.0.88
 opt_einsum==3.4.0
 packaging==25.0
 pandas==2.3.3
 pillow==12.0.0
+pluggy==1.6.0
 polars==1.35.2
 polars-runtime-32==1.35.2
 protobuf==3.19.6
 psutil==7.1.3
+pure-sasl==0.6.2
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
+Pygments==2.19.2
+PyHive==0.7.0
 pyparsing==3.2.5
+pytest==9.0.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
 PyYAML==6.0.3
@@ -56,8 +79,12 @@ tensorflow==2.10.1
 tensorflow-estimator==2.10.0
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==3.2.0
+thrift==0.22.0
+thrift-sasl==0.4.3
+tomli==2.3.0
 torch==2.9.1
 torchvision==0.24.1
+triton==3.5.1
 typing_extensions==4.15.0
 tzdata==2025.2
 ultralytics==8.3.228
