--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 absl-py==2.3.1
+astroid==4.0.2
 astunparse==1.6.3
+black==25.11.0
 cachetools==6.2.2
 certifi==2025.11.12
 charset-normalizer==3.4.4
+click==8.3.1
 contourpy==1.3.2
 cycler==0.12.1
+dill==0.4.0
 exceptiongroup==1.3.0
 filelock==3.20.0
 flatbuffers==25.9.23
@@ -19,6 +23,7 @@ grpcio==1.76.0
 h5py==3.15.1
 idna==3.11
 iniconfig==2.3.0
+isort==7.0.0
 Jinja2==3.1.6
 keras==2.10.0
 Keras-Preprocessing==1.1.2
@@ -27,7 +32,9 @@ libclang==18.1.1
 Markdown==3.10
 MarkupSafe==3.0.3
 matplotlib==3.10.7
+mccabe==0.7.0
 mpmath==1.3.0
+mypy_extensions==1.1.0
 networkx==3.4.2
 numpy==2.2.6
 nvidia-cublas-cu12==12.8.4.1
@@ -50,7 +57,9 @@ opencv-python==4.12.0.88
 opt_einsum==3.4.0
 packaging==25.0
 pandas==2.3.3
+pathspec==0.12.1
 pillow==12.0.0
+platformdirs==4.5.0
 pluggy==1.6.0
 polars==1.35.2
 polars-runtime-32==1.35.2
@@ -61,9 +70,11 @@ pyasn1==0.6.1
 pyasn1_modules==0.4.2
 Pygments==2.19.2
 PyHive==0.7.0
+pylint==4.0.3
 pyparsing==3.2.5
 pytest==9.0.1
 python-dateutil==2.9.0.post0
+pytokens==0.3.0
 pytz==2025.2
 PyYAML==6.0.3
 requests==2.32.5
@@ -82,6 +93,7 @@ termcolor==3.2.0
 thrift==0.22.0
 thrift-sasl==0.4.3
 tomli==2.3.0
+tomlkit==0.13.3
 torch==2.9.1
 torchvision==0.24.1
 triton==3.5.1
