Upload test images and videos

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,7 @@ models/
 src/vision/__pycache__/
 src/etl/__pycache__/
 tests/__pycache__/
-images/
-videos/
-output/
+output/*
+!output/.gitkeep
 data/input/images/.DS_Store
 data/input/videos/.DS_Store
